--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,14 @@
+.section_fir{
+  background-color: #555;
+ padding: 100px;
+ text-align: center;
+ font-size: 35px;
+ color: white;
+}
+
+
+
+
 .section_sec{
   background-color: #666;
  padding: 100px;
