--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -20,12 +20,12 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div> -->
-<section>
+<!-- <section>
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <!-- <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button> -->
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -52,7 +52,15 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+</section> -->
+
+<section class="section_fir">
+  1
+  <%= javascript_pack_tag 'header1'%>
+
+
 </section>
+
 
 <section class="section_sec">
   2
