--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,39 @@
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script> -->
     <script>
+      function myFunction() {
+          var x, text;
 
+          // 获取 id="numb" 的值
+          x = document.getElementById("numb").value;
 
-    </script>>
+          // 如果输入的值 x 不是数字或者小于 1 或者大于 10，则提示错误 Not a Number or less than one or greater than 10
+          if (isNaN(x) || x < 1 || x > 10) {
+              text = "输入错误";
+          } else {
+              text = "输入正确";
+          }
+          document.getElementById("demo").innerHTML = text;
+        }
+   </script>
 
 
   </head>
 
   <body>
+      <h1>JavaScript 验证输入</h1>
+
+    <p>请输入 1 到 10 之间的数字：</p>
+
+    <input id="numb">
+
+    <button type="button" onclick="myFunction()">提交</button>
+
+    <p id="demo"></p>
+
+
     <%= render('shared/navbar') %>
 
     <%= yield %>
