--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,9 @@
 
   <body>
 
-
-
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <%= render('shared/navbar') %>
-
     <%= yield %>
 
     <%= render('shared/footer') %>
