--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -56,6 +56,10 @@
         <li class="nav-item">
           <a class="nav-link disabled"><font color='yellow'size='4'>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Forum </font></a>
         </li>
+
+         <li class="nav-item">
+          <a class="nav-link" href = "/ionut"><font color='yellow'size='4'> Ionut </font></a>
+        </li>
       </ul>
       <form class="d-flex">
         <button class="btn btn-outline-success" type="submit" style="color:yellow">Login </button>
