--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -9,6 +9,9 @@
 
 <section class="section_fir">
   1
+  <div class="ratio ratio-16x9" style="text-align:center">
+  <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" title="YouTube video" allowfullscreen></iframe>
+  </div>
 
 
 </section>
