--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -1,31 +1,37 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Forums</h1>
+<center><h1>Forums</h1></center>
+<% @forums.each do |forum| %>
+  <div class="blog-card">
+    <div class="meta">
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Imageurl</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <div class="photo" style="background-image: url(<%= forum.imageurl %>)"></div>
+      <ul class="details">
+        <li class="author"><a><%= forum.user.email %></a></li>
+        <li class="date"><%= time_ago_in_words(forum.created_at) %></li>
+        <li class="tags">
+          <ul>
+            <li><a><%= forum.category%></a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="description">
+      <h1><%= link_to forum.title, forum %></h1>
+      <p><%= forum.content[0,50] %></p>
+      <br>
+      <p class="read-more">
+        <%= link_to "Read More", forum %>
+        <br>
+        <% if forum.user == current_user %>
+          <a><%= link_to 'Delete Post', forum, method: :delete, data: { confirm: 'Are you sure?' } %></a>
+        <% end %>
 
-  <tbody>
-    <% @forums.each do |forum| %>
-      <tr>
-        <td><%= forum.title %></td>
-        <td><%= forum.content %></td>
-        <td><%= forum.imageurl %></td>
-        <td><%= link_to 'Show', forum %></td>
-        <td><%= link_to 'Edit', edit_forum_path(forum) %></td>
-        <td><%= link_to 'Destroy', forum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      </p>
+    </div>
+  </div>
+ 
 
 <br>
-
+<% end %>
 <%= link_to 'New Forum', new_forum_path %>
