--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -60,6 +60,9 @@
           <li class="nav-item">
             <%= link_to "Signout", destroy_user_session_path, method: "delete" %>
           </li>
+          <li class="nav-item">
+            <%= link_to "profile", edit_user_registration_path %>
+          </li>
         <% else %>
           <li class="nav-item">
             <%= link_to "Signin", new_user_session_path %>
