--- a/app/assets/stylesheets/show1.scss
+++ b/app/assets/stylesheets/show1.scss
@@ -48,10 +48,17 @@ body {
   padding-top: .125rem;
   width: 80%;
 }
+.profile-img {
+width: 100px;
+height: 100px;
+border-radius: 50%;
+background-position: relative;
+background-size: cover;
+}
+
 .blog-author h3::before,
 .blog-author--no-cover h3::before {
-  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/17779/russ.jpeg");
-  background-size: cover;
+  
   border-radius: 50%;
   content: " ";
   display: inline-block;
