--- a/app/views/forums/_form.html.erb
+++ b/app/views/forums/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="hidden_field">
-    <%= form.hidden_field :imageurl, value:"assets/BannerPics/img"+(rand(1-54)).to_s+".jpg" %>
+    <%= form.hidden_field :imageurl, value:"BannerPics/img"+(rand(1-54)).to_s+".jpg" %>
   </div>
 
   <div class="actions">
