--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,35 +1,35 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
+<div class="container rounded bg-white mt-5 mb-5">
+    <div class="row">
+        <div class="col-md-3 border-right">
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px"<%= image_tag @user.thumbnail%><span class="font-weight-bold"><%= @user.firstname + " " + @user.lastname%></span><span class="text-black-50"><%= @user.email%></span><span> </span></div>
+        </div>
+        <div class="col-md-5 border-right">
+            <div class="p-3 py-5">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h4 class="text-right">Profile Settings</h4>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-md-6"><div class="field form-group"><%f.label :firstname%><br /><%= f.text_field :firstname,class: "form-control",placeholder: "First Name", autofocus: true, autocomplete: "firstname" %></div></div>
+                    
+                    <div class="col-md-6"><div class="field form-group"><%f.label :lastname%><br /><%= f.text_field :lastname,class: "form-control",placeholder: "Last Name", autofocus: true, autocomplete: "lastname" %></div></div>
+                    
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-12"><div class="field form-group"><%f.label :email%><br /><%= f.email_field :email,class: "form-control",placeholder: "Email", autofocus: true, autocomplete: "email" %></div></div>
+                    
+                    <div class="col-md-12"><div class="field form-group"><%f.label :password%><br /><%= f.password_field :password,class: "form-control",placeholder: "Password", autofocus: true, autocomplete: "new-password" %></div></div>
+                    
+                    <div class="col-md-12"><div class="field form-group"><%f.label :password_confirmation%><br /><%= f.password_field :password_confirmation,class: "form-control",placeholder: "Password Confirmation", autofocus: true, autocomplete: "new-password" %></div></div>
+                    
+                    <div class="col-md-12"><div class="field form-group"><%f.label :current_password%><br /><%= f.password_field :current_password,class: "form-control",placeholder: "Current Password", autofocus: true, autocomplete: "current-password" %></div></div>
+                </div>
+                <div class="mt-5 text-center"><div class="actions"><%= f.submit "Save Profile", class:"btn btn-primary profile-button" %></div></div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
