--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,12 +1,10 @@
 
-<%= simple_form_for(@comment) do |f| %>
+<%= simple_form_for([@forum, @forum.comments.build]) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
     <%= f.input :comment %>
-    <%= f.association :forum %>
-    <%= f.association :user %>
   </div>
 
   <div class="form-actions">
