--- a/app/assets/stylesheets/show1.scss
+++ b/app/assets/stylesheets/show1.scss
@@ -48,33 +48,20 @@ body {
   padding-top: .125rem;
   width: 80%;
 }
-.profile-img {
-width: 100px;
-height: 100px;
-border-radius: 50%;
-background-position: relative;
-background-size: cover;
-}
 
 .blog-author h3::before,
-.blog-author--no-cover h3::before {
-  
-  border-radius: 50%;
-  content: " ";
-  display: inline-block;
-  height: 32px;
-  margin-right: .5rem;
-  position: relative;
-  top: 8px;
-  width: 32px;
-}
+
 .blog-author h3 {
   color: #fff;
   font-weight: 100;
+  margin-block-start: 0 em;
+  margin-inline-start: -60px;
 }
 .blog-author--no-cover h3 {
   color: lighten(#333, 40%);
   font-weight: 100;
+  margin-block-start: 0 em;
+  margin-inline-start: -60px;
 }
 
 // Blog body
