--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -18,9 +18,12 @@
 }
 
 .section_third{
-  background-color: #777;
+    background-color: #777;
  padding: 100px;
  text-align: center;
  font-size: 35px;
  color: white;
+}
+.pagination{
+background-color: #777;
 }
