--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -24,3 +24,19 @@
 <section class="section_third">
   3
 </section>
+
+       <ul class="pagination " style="justify-content: center">
+         <li class="page-item">
+           <a class="page-link" href="#" aria-label="Previous">
+             <span aria-hidden="true">&laquo;</span>
+           </a>
+         </li>
+         <li class="page-item"><a class="page-link" href="#">1</a></li>
+         <li class="page-item"><a class="page-link" href="#">2</a></li>
+         <li class="page-item"><a class="page-link" href="#">3</a></li>
+         <li class="page-item">
+           <a class="page-link" href="#" aria-label="Next">
+             <span aria-hidden="true">&raquo;</span>
+           </a>
+         </li>
+       </ul>
