--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
   </div>
 </nav> -->
 
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark" style="width:1848px">
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark" style="width:1848px height:90px" >
   <div class="container-fluid">
     <nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
