--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,34 +1,58 @@
-<h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div class="form-inputs">
+  <div class="login-wrapper">
+    <div class="header">
+      Sign up
+    </div>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :firstname,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "firstname" }%>
-    <%= f.input :lastname,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "lastname" }%>
-    <%= f.hidden_field :thumbnail, value:"thumb/"+(rand(1-12)).to_s+".png" %>
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+      <div class="form-wrapper">
+        <div class="form-info">
+          <div class="input-item">
+            <%= f.input :firstname,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "firstname" }%>
+          </div>
+        <div class="input-item">
+          <%= f.input :lastname,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "lastname" }%>
+        </div>
+        <div class="input-item">
+          <%= f.hidden_field :thumbnail, value:"thumb/"+(rand(1-12)).to_s+".png" %>
+        </div>
+        <div class="input-item">
+          <%= f.input :email,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "email" }%>
+        </div>
+        <div class="input-item">
+          <%= f.input :password,
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
+        <div class="input-item">
+          <%= f.input :password_confirmation,
+                      required: true,
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
+        </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Sign up" %>
+      </div>
+    <% end %>
+
+    <%= render "users/shared/links" %>
+
+
+
+
+      </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
