Made New Nav Bar and ensured responsiveness

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,20 +12,14 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script> -->
-    <script>
-
-   </script>
-
-
   </head>
 
   <body>
 
     <!-- <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p> -->
-    <%= render('shared/navbar') %>
+    <%= render('shared/navbar1') %>
     <%= yield %>
-
     <%= render('shared/footer') %>
     <!-- <button  id="myBtn">click</button>
     <p id="demo">11</p> -->
