--- a/app/assets/stylesheets/index1.scss
+++ b/app/assets/stylesheets/index1.scss
@@ -27,7 +27,7 @@ $color_grey_dark: #a2a2a2;
   overflow: hidden;
   z-index: 0;
   a {
-    color: inherit;
+    color: #000000;
     &:hover {
       color: $color_prime;
     }
@@ -80,25 +80,24 @@ $color_grey_dark: #a2a2a2;
     .author:before {
       font-family: FontAwesome;
       margin-right: 10px;
-      content: "\f007";
+      
     }
 
     .date:before {
       font-family: FontAwesome;
       margin-right: 10px;
-      content: "\f133";
+      
     }
 
     .tags {
       ul:before {
         font-family: FontAwesome;
-        content: "\f02b";
         margin-right: 10px;
       }
       li {
-        margin-right: 2px;
+        margin-right: 10px;
         &:first-child {
-          margin-left: -4px;
+          margin-left: 0px;
         }
       }
     }
@@ -148,6 +147,7 @@ $color_grey_dark: #a2a2a2;
   }
   p {
     position: relative;
+    color: #000000;
     margin: 1rem 0 0;
     &:first-of-type {
       margin-top: 1.25rem;
