--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
 
-      <img src="/assets/logo.jpg" alt="Rails" width="80" height="80" class="d-inline-block align-text-top"/>
+      <img src="/assets/newnewlogo.png" alt="Rails" width="80" height="80" class="d-inline-block align-text-top"/>
       <!-- <a href="navbar-logo">Firefly</a> -->
 
     </a>
