--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -1,7 +1,21 @@
 <p id="notice"><%= notice %></p>
 
-<body>
-<center><h1>Forums</h1></center>
+
+<svg viewBox="0 0 960 300", class= "ant">
+  <symbol id="s-text">
+    <text text-anchor="middle" x="50%" y="80%">Forum </text>
+    <text text-anchor="middle" x="52%" y="80%">Forum </text>
+  </symbol>
+
+  <g class = "g-ants">
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+  </g>
+</svg>
+
 <% @forums.each do |forum| %>
   <div class="blog-card">
     <div class="meta">
@@ -36,4 +50,4 @@
 <br>
 <% end %>
 <%= link_to 'New Forum', new_forum_path %>
-</body>
+
