--- a/app/assets/stylesheets/navbar1.scss
+++ b/app/assets/stylesheets/navbar1.scss
@@ -11,7 +11,7 @@ body{
 nav{
     height: 6rem;
     width: 100vw;
-    background-color: #131418;
+    background-color: #3e3e3e;
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
     display: flex;
     position: fixed;
@@ -30,7 +30,7 @@ nav{
 }
 
 /*Styling Links*/
-.nav-links1{
+.nav-links{
     display: flex;
     list-style: none; 
     width: 88vw;
@@ -39,18 +39,23 @@ nav{
     align-items: center;
     text-transform: uppercase;
 }
-.nav-links1 li1 a1{
+.nav-links li1 a{
     color: #FFF01F;
     text-decoration: none;
     margin: 0 0.7vw;
 }
-.nav-links1 li1 a1:hover {
+.nav-links li1 a:hover {
     color: #FFFFFF;
 }
-.nav-links1 li1 {
+.nav-links li2 a{
+    color: #000000;
+    text-decoration: none;
+    margin: 0 0.7vw;
+}
+.nav-links li1 {
     position: relative;
 }
-.nav-links1 li1 a1::before {
+.nav-links li1 a::before {
     content: "";
     display: block;
     height: 3px;
@@ -61,7 +66,24 @@ nav{
     transition: all ease-in-out 250ms;
     margin: 0 0 0 10%;
 }
-.nav-links1 li1 a1:hover::before{
+.nav-links li1 a:hover::before{
+    width: 80%;
+}
+.nav-links li1 {
+    position: relative;
+}
+.nav-links li1 a::before {
+    content: "";
+    display: block;
+    height: 3px;
+    width: 0%;
+    background-color: #FFF01F;
+    position: absolute;
+    top: -10px;
+    transition: all ease-in-out 250ms;
+    margin: 0 0 0 10%;
+}
+.nav-links li1 a:hover::before{
     width: 80%;
 }
 
@@ -127,7 +149,7 @@ nav{
         z-index: 2;
         transition: all 0.7s ease;
     }
-    .nav-links1{
+    .nav-links{
         position: fixed;
         background: #131418;
         height: 100vh;
@@ -138,34 +160,34 @@ nav{
         transition: all 1s ease-out;
         pointer-events: none;
     }
-    .nav-links1.open{
+    .nav-links.open{
         clip-path: circle(1000px at 90% -10%);
         -webkit-clip-path: circle(1000px at 90% -10%);
         pointer-events: all;
     }
-    .nav-links1 li1{
+    .nav-links li1{
         opacity: 1;
     }
-    .nav-links1 li1:nth-child(1){
+    .nav-links li1:nth-child(1){
         transition: all 0.5s ease 0.2s;
     }
-    .nav-links1 li1:nth-child(2){
+    .nav-links li1:nth-child(2){
         transition: all 0.5s ease 0.4s;
     }
-    .nav-links1 li1:nth-child(3){
+    .nav-links li1:nth-child(3){
         transition: all 0.5s ease 0.6s;
     }
-    .nav-links1 li1:nth-child(4){
+    .nav-links li1:nth-child(4){
         transition: all 0.5s ease 0.7s;
     }
-    .nav-links1 li1:nth-child(5){
+    .nav-links li1:nth-child(5){
         transition: all 0.5s ease 0.8s;
     }
-    .nav-links1 li1:nth-child(6){
+    .nav-links li1:nth-child(6){
         transition: all 0.5s ease 0.9s;
         margin: 0;
     }
-    .nav-links1 li1:nth-child(7){
+    .nav-links li1:nth-child(7){
         transition: all 0.5s ease 1s;
         margin: 0;
     }
