--- a/app/javascript/stylesheets/footer.scss
+++ b/app/javascript/stylesheets/footer.scss
@@ -21,7 +21,7 @@
 //     display: none;
 // }
 hr{
-  width: 80%
+  width: 80%;
   margin: 10px auto;
   height: 1px;
   background-image: linear-gradient(
