--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,25 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
 
-    <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-
-    <style media="screen">
-
-    </style>
-
-  </head>
-
-  <body>
-
-
-
-
-
-
-
-    <footer class="text-center text-white" style="background-color: yellow;">
+    <footer class="text-center text-white" style="background: linear-gradient(to right, #FFF01F 0%, #eb466b 100%);">
 
 
 
@@ -97,11 +77,6 @@
       <!-- Copyright -->
       <div class="text-center text-dark p-3" >
 
-      <a href="#" style="color:black">© 2022 Copyright:   Firefly.com</a>
+      <a href="#" style="color: black">© 2022 Copyright:   Firefly.com</a>
       </div>
     </footer>
-
-
-
-  </body>
-</html>
