--- a/app/views/shared/_navbar1.html.erb
+++ b/app/views/shared/_navbar1.html.erb
@@ -8,31 +8,44 @@
         <div class="line2"></div>
         <div class="line3"></div>
     </div>
-    <ul1 class="nav-links1">
-        <li1><a1 href="#">Home</a1></li1>
-        <li1><a1 href="#">Solutions</a1></li1>
-        <li1><a1 href="#">Products</a1></li1>
-        <li1><a1 href="#">Services</a1></li1>
-        <li1><a1 href="#">Contact Us</a1></li1>
-        <li1><button class="join-button" href="#">Login</button></li1>
-        <li1><button class="join-button" href="#">Account</button></li1>
+    <ul1 class="nav-links">
+        <li1><a href="/">Home</a></li1>
+        <li1><a href="#">Map</a></li1>
+        <li1><a href="/forums">Forum</a></li1>
+        <li1><a href="/aboutus">About Us</a></li1>
+        <li1><a href="#">Contact Us</a></li1>
+        <% if user_signed_in? %>
+            <button class="join-button" type="submit" >
+            <li2><%= link_to "Profile", edit_user_registration_path %></li2>
+            </button>
+            <button class="join-button" type="submit" >
+            <li2><%= link_to "Sign-Out", destroy_user_session_path, method: "delete" %></li2>
+            </button>
+        <% else %>
+            <button class="join-button" type="submit" >
+            <li2><%= link_to "Login", new_user_session_path  %></li2>
+            </button>
+            <button class="join-button" type="submit" >
+            <li2><%= link_to "Sign-Up", new_user_registration_path %></li2>
+            </button>
+        <% end %>
+        
     </ul1>
 </nav>
 </nav>
 <script>
-    const hamburger1 = document.querySelector(".hamburger1");
-    const navLinks1 = document.querySelector(".nav-links1");
-    const links1 = document.querySelectorAll(".nav-links1 li1");
+    var hamburger1 = document.querySelector(".hamburger1");
+    var navLinks = document.querySelector(".nav-links");
+    var links = document.querySelectorAll(".nav-links li");
 
     hamburger1.addEventListener('click', ()=>{
        //Animate Links
-        navLinks1.classList.toggle("open");
-        links1.forEach(link => {
-            link1.classList.toggle("fade");
+        navLinks.classList.toggle("open");
+        links.forEach(link => {
+            link.classList.toggle("fade");
         });
 
         //Hamburger Animation
         hamburger1.classList.toggle("toggle");
     });
 </script>
-</head>
