--- a/app/assets/stylesheets/index1.scss
+++ b/app/assets/stylesheets/index1.scss
@@ -20,8 +20,7 @@ $color_grey_dark: #a2a2a2;
   display: flex;
   flex-direction: column;
   margin: 1rem auto;
-  box-shadow: 0 3px 7px -1px rgba(#000, .1);
-  margin-bottom: 1.6%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   background: $color_white;
   line-height: 1.4;
   font-family: sans-serif;
