--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,35 +1,39 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-
-<div class="container rounded bg-white mt-5 mb-5">
-    <div class="row">
-        <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px"<%= image_tag @user.thumbnail%><span class="font-weight-bold"><%= @user.firstname + " " + @user.lastname%></span><span class="text-black-50"><%= @user.email%></span><span> </span></div>
-        </div>
-        <div class="col-md-5 border-right">
-            <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h4 class="text-right">Profile Settings</h4>
-                </div>
-                <div class="row mt-2">
-                    <div class="col-md-6"><div class="field form-group"><%f.label :firstname%><br /><%= f.text_field :firstname,class: "form-control",placeholder: "First Name", autofocus: true, autocomplete: "firstname" %></div></div>
-                    
-                    <div class="col-md-6"><div class="field form-group"><%f.label :lastname%><br /><%= f.text_field :lastname,class: "form-control",placeholder: "Last Name", autofocus: true, autocomplete: "lastname" %></div></div>
-                    
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-12"><div class="field form-group"><%f.label :email%><br /><%= f.email_field :email,class: "form-control",placeholder: "Email", autofocus: true, autocomplete: "email" %></div></div>
-                    
-                    <div class="col-md-12"><div class="field form-group"><%f.label :password%><br /><%= f.password_field :password,class: "form-control",placeholder: "Password", autofocus: true, autocomplete: "new-password" %></div></div>
-                    
-                    <div class="col-md-12"><div class="field form-group"><%f.label :password_confirmation%><br /><%= f.password_field :password_confirmation,class: "form-control",placeholder: "Password Confirmation", autofocus: true, autocomplete: "new-password" %></div></div>
-                    
-                    <div class="col-md-12"><div class="field form-group"><%f.label :current_password%><br /><%= f.password_field :current_password,class: "form-control",placeholder: "Current Password", autofocus: true, autocomplete: "current-password" %></div></div>
-                </div>
-                <div class="mt-5 text-center"><div class="actions"><%= f.submit "Save Profile", class:"btn btn-primary profile-button" %></div></div>
-            </div>
+<div class="background">
+  <div class="container">
+    <div class="screen">
+      <div class="screen-body">
+        <div class="screen-body-item left">
+          <div class="app-title">
+            <span>PROFILE</span>
+          </div>
+          <div class="app-personal">
+          <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px"<%= image_tag @user.thumbnail%><span class="font-weight-bold"><%= @user.firstname + " " + @user.lastname%></span><span class="font-weight-bold"><%= @user.email%></span><span> </span></div>
         </div>
     </div>
+        <div class="screen-body-item">
+          <div class="app-form">
+            <div class="app-form-group">
+              <%=f.label :firstname ,class: "app-subhead" %><br /><%= f.text_field :firstname,class: "form-control",placeholder: "First Name", autofocus: true, autocomplete: "firstname" %>
+            </div>
+            <div class="app-form-group">
+              <%=f.label :lastname ,class: "app-subhead" %><br /><%= f.text_field :lastname,class: "form-control",placeholder: "Last Name", autofocus: true, autocomplete: "lastname" %>
+            </div>
+            <div class="app-form-group">
+             <%= f.label :email,class: "app-subhead"  %><br /><%= f.email_field :email,class: "form-control",placeholder: "Email", autofocus: true, autocomplete: "email" %>
+            </div>
+            <div class="app-form-group">
+              <%= f.label :password,class: "app-subhead"  %><br /><%= f.password_field :password,class: "form-control",placeholder: "Password", autofocus: true, autocomplete: "new-password" %>
+            </div>
+            <div class="app-form-group">
+              <%= f.label :password_confirmation,class: "app-subhead"  %><br /><%= f.password_field :password_confirmation,class: "form-control",placeholder: "Password Confirmation", autofocus: true, autocomplete: "new-password" %>
+            </div>
+            
+              <center><button class="app-form-button" ><div class="actions"><%= f.submit "SAVE PROFILE", class:"app-form-button" %></div></button></center>
+              <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-</div>
-</div>
-<% end %>
