--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -4,15 +4,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 body {
   background: linear-gradient(to right, #FFF01F 0%, #eb466b 100%);
   font-size: 12px;
+
 }
 
 body, button, input {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   letter-spacing: 1.4px;
+  color: #FFF01F;
 }
 
 .background {
@@ -245,7 +248,7 @@ body, button, input {
   margin: 0 5px;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 800px) {
   .screen-body {
     flex-direction: column;
   }
