--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -29,7 +29,7 @@
       <h1><%= @forum.title %></h1>
     </div>
     <div class="blog-summary">
-      <p><%= @forum.content %></p>
+      <p><%= @forum.richcontent %></p>
     </div>
     <div class="blog-tags">
       <ul>
