--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -5,7 +5,7 @@
       <div class="screen-body">
         <div class="screen-body-item left">
           <div class="app-title">
-            <span>PROFILE</span>
+            <span style="color:yellow">PROFILE</span>
           </div>
           <div class="app-personal">
           <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px"<%= image_tag @user.thumbnail%><span class="font-weight-bold"><%= @user.firstname + " " + @user.lastname%></span><span class="font-weight-bold"><%= @user.email%></span><span> </span></div>
