--- a/app/assets/stylesheets/heading.scss
+++ b/app/assets/stylesheets/heading.scss
@@ -13,10 +13,10 @@ body{
 .ant {
     display: block;
     font: 10.5em 'Montserrat';
-    width: 960px;
-    height: 300px;
+    width: 100%;
+    height: 150px;
     margin: 0 auto;
-    margin-top: -55px;
+    margin-top: -15px;
 }
 
 .text-copy {
