--- a/app/assets/stylesheets/show1.scss
+++ b/app/assets/stylesheets/show1.scss
@@ -1,3 +1,6 @@
+*{
+  color: #000000;
+}
 body {
   background: #e5ded8;
   box-sizing: border-box;
@@ -70,6 +73,7 @@ body {
 .blog-body {
   margin: 0 auto;
   width: 80%;
+
 }
 .video-body {
   height: 100%;
