--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,7 +6,7 @@
       <div class="screen-body">
         <div class="screen-body-item left">
           <div class="app-title">
-            <span>Sign Up </span>
+            <span style="color:yellow">SIGN UP</span>
           </div>
         </div>
         <div class="screen-body-item">
