--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -27,7 +27,7 @@
               <%= f.label :password,class: "app-subhead"  %><br /><%= f.password_field :password,class: "form-control",placeholder: "Password", autofocus: true, autocomplete: "new-password" %>
             </div>
             <div class="app-form-group">
-              <%= f.label :password_confirmation,class: "app-subhead"  %><br /><%= f.password_field :password_confirmation,class: "form-control",placeholder: "Password Confirmation", autofocus: true, autocomplete: "new-password" %>
+              <%= f.label :password_confirmation,class: "app-subhead"  %><br /><%= f.password_field :password_confirmation,class: "form-control",placeholder: "Password Confirmation", autofocus: true %>
             </div>
             
               <button class="app-form-button" ><div class="actions"><%= f.submit "SIGN-UP", class:"app-form-button" %></div></button>
